@@ -1,3 +1,8 @@
+2008-01-21  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
+
+	* es.po: Updated Spanish translation.
+	* Makefile.am: Added es to DOC_LINGUAS
+
 2007-12-31  Yannig Marchegay <yannig@marchegay.org>
 
 	* oc.po: Updated Occitan translation.
